trunk/Archive2/00/6057684cc3e3d4/output
main.cpp: In instantiation of 'void A<T>::f(int) [with T = float]':
main.cpp:19:10:   required from here
main.cpp:6:7: error: assignment of read-only parameter 'x'
     x = 50;
       ^
